# andrewcli

./: .gitignore  README.md  andrewcli.py  app.py  config.yaml  pyproject.toml  requirements.txt
doc/: api.md  architecture.md  events.md  extending.md  memory.md
domains/coding/: domain.py  system_prompt.md
domains/coding/tools/: common.py
domains/general/: domain.py  system_prompt.md
domains/general/skills/: example.md
events/: file.py  project.py  timer.py
src/: app.py  server.py
src/cli/: app.py  renderer.py
src/core/: andrew.py  domain.py  event.py  events_registry.py  llm.py  memory.py  registry.py  router.py  server.py  skill.py  tool.py
src/defaults/: config.yaml
src/defaults/domains/coding/: config.yaml
src/defaults/domains/coding/tools/: common.py
src/defaults/domains/general/: config.yaml
src/defaults/domains/general/skills/: create_new_skill.md
src/defaults/events/: loop.py  monitor.py  project.py
src/domains/: coding.py  experimental.py  general.py
src/events/: file.py  loop.py  project.py  schedule.py  timer.py
src/shared/: config.py  paths.py
src/skills/: myskills.py
src/skills/skills_files/: create_new_skill.md
src/tools/: common.py  google.py  obsidian.py  rss.py  skills.py
src/tray/: __main__.py  app.py  bootstrap.py  controller.py  icon.py  md.css  panel.py  style.css  worker.py
src/ui/: animations.py  filter.py  renderer.py
src/voice/: __init__.py  hey_andrew.onnx  hey_andrew.tflite  sanitize.py  session.py  stt.py  tts.py  tts_edge.py
